makes site bilingual

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -187,10 +187,9 @@ $navbarText:                      $gray;
 $navbarLinkColor:                 $gray;
 $navbarLinkColorHover:            $white;
 $navbarLinkColorActive:           $white;
-$navbarLinkBackgroundHover:       $grayLight;
+$navbarLinkBackgroundHover:       $red;
 $navbarLinkBackgroundActive:      $gapiBlueMedium;
 
-$navbarBrandColor:                $navbarLinkColor;
 
 // Inverted navbar
 $navbarInverseBackground:                #111111;
