--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,7 +1,9 @@
 <div id="footer">
   <div class="row">
-    <div class="span10 offset1">
-      <%= copywriting('organization', { :scope => 'footer', :default => '501c3' }) %>
+    <div class="span12">
+      <div class="content-container">
+        <%= copywriting('organization', { :scope => 'footer', :default => '501c3' }) %>
+      </div>
     </div>
   </div>
 </div>
