--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,1 +1,16 @@
-<%= render '/refinery/content_page' %>
+<div class="row">
+  <div class="title span12">
+    <h2 class="page-heading"><%= @page.title %></h2>
+  </div>
+  <div id="about" class="text-container span12">
+    <% @page.parts.each_with_index do |part, i| %>
+        <div class="row">
+          <div class="span12">
+            <div class="text-container content-container">
+            <%= simple_format part.body %>
+            </div>
+          </div>
+        </div>
+    <% end %>
+  </div>
+</div>
