hooked up clip/interview models and rewrote histories front end page

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -3,25 +3,29 @@
 #header {
   padding-top: 20px;
   background-image: url('cuba_bg.jpg');
-  background-position: -50px -240px;
-  min-height: 120px;
+  background-position: -50px -210px;
+  min-height: 160px;
 
   .navbar {
     position: relative;
     .site-heading {
+      font-family:"Garamond";
       font-size: 30px;
       line-height: 5px;
       margin-bottom: -2px;
-      margin-left: 97px;
+      margin-top: 20px;
+      margin-left: 192px;
       color: $white;
       text-shadow: -1px 0 black, 0 1px black,
           1px 0 black, 0 -1px black;
     }
     .site-heading2 {
+      font-family:"Garamond";
       float: left;
       font-size: 40px;
       line-height: 45px;
-      margin-top: 0px;
+      margin-left: 100px;
+      margin-top: 20px;
       margin-bottom: 0px;
       color: $white;
       text-shadow: -1px 0 black, 0 1px black,
@@ -29,23 +33,26 @@
     }
 
     .site-heading3 {
+      font-family:"Garamond";
       float: left;
       font-size: 60px;
       line-height: 30px;
-      margin-top: 0px;
+      margin-top: 20px;
       margin-bottom: 0px;
-      color: $red;
+      color: #000066;
       text-shadow: -1px 0 black, 0 1px black,
           1px 0 black, 0 -1px black;
     }
 
     .site-heading4 {
+      font-family:"Garamond";
       clear: both;
       position: relative;
-      color: $blue;
+      color: $red;
       font-size: 45px;
       line-height: 22px;
-      margin-left: 16px;
+      margin-left: 155px;
+      margin-top: 20px;
       text-shadow: -1px 0 black, 0 1px black,
           1px 0 black, 0 -1px black;
       z-index: 1;
