--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -45,7 +45,7 @@ $white:                 #fff;
 $blue:                  #049cdb;
 $blueDark:              #0064cd;
 $green:                 #46a546;
-$red:                   #9d261d;
+$red:                   #710000;
 $yellow:                #ffc40d;
 $orange:                #f89406;
 $pink:                  #c3325f;
