--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -9,7 +9,7 @@
   .navbar {
     position: relative;
     .site-heading {
-      font-family:"Garamond";
+      //font-family:"Garamond";
       font-size: 30px;
       line-height: 5px;
       margin-bottom: -2px;
@@ -20,7 +20,7 @@
           1px 0 black, 0 -1px black;
     }
     .site-heading2 {
-      font-family:"Garamond";
+      //font-family:"Garamond";
       float: left;
       font-size: 40px;
       line-height: 45px;
@@ -33,7 +33,7 @@
     }
 
     .site-heading3 {
-      font-family:"Garamond";
+      //font-family:"Garamond";
       float: left;
       font-size: 60px;
       line-height: 30px;
@@ -45,13 +45,13 @@
     }
 
     .site-heading4 {
-      font-family:"Garamond";
+      //font-family:"Garamond";
       clear: both;
       position: relative;
       color: $red;
       font-size: 45px;
       line-height: 22px;
-      margin-left: 155px;
+      margin-left: 147px;
       margin-top: 20px;
       text-shadow: -1px 0 black, 0 1px black,
           1px 0 black, 0 -1px black;
