--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,7 +1,49 @@
+<% content_for :javascripts do %>
+  <%= javascript_include_tag 'map_home' %>
+<% end %>
+<% interview = @interviews.last %>
+
 <div class="row">
   <div class="title span12">
-    <h2 class="page-heading"><%= @page.title %></h2>
+    <h2 class="page-heading">Our latest interview - <%= interview.full_name %> </h2>
   </div>
+  <div id="first-history">
+    <div class="span7">
+      <div id="map-home"></div>
+      <div class="history">
+        <div class="histories-heading">
+          <div class="content-container">
+            <a name="<%= interview.full_name.parameterize %>" class="anchor" ></a>
+            <h3><%= interview.full_name %></h3>
+            <h4><%= interview.city%> - Entered US on <%= interview.date_of_entry %> </h4>
+          </div>
+        </div>
+        <div id="interview-text">
+          <div class="content-container">
+            <%= simple_format interview.description %>
+            <br />
+            <% unless interview.clips.empty? %>
+              <h4>Interview Clips</h4>
+            <% end %>
+            <ul class="clips">
+              <% interview.clips.each do |clip| %>
+                <% file = ::Refinery::Resource.find_by_id(clip.file_id) %>
+                <li><%= link_to clip.name, "/clips/#{clip.id}" %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="image-container">
+        <% picture = ::Refinery::Image.find_by_id(interview.picture_id) %>
+        <%= image_tag(picture.url) %>
+        <%#= image_tag(interview.images[i].url) %>
+      </div>
+    </div>
+  </div>
+  <div id="map-home" class="span5"></div>
   <div id="about" class="text-container span12">
     <% @page.parts.each_with_index do |part, i| %>
         <div class="row">
