--- a/app/views/refinery/pages/about.html.erb
+++ b/app/views/refinery/pages/about.html.erb
@@ -4,15 +4,41 @@
       <h2 class="page-heading inline"><%= @page.title %></h2>
     </div>
   </div>
-  <div id="about" class="text-container span12">
+  <div id="about" class="span12">
     <% @page.parts.each_with_index do |part, i| %>
+      <% if i.even? %>
         <div class="row">
-          <div class="span12">
+          <div class="span7">
+            <div class="text-container content-container">
+            <%= simple_format part.body %>
+            </div>
+          </div>
+          <div class="span5">
+            <div class="image-container">
+              <% if @page.images[i] %>
+                <%= image_tag(@page.images[i].url) %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <br />
+      <% else %>
+        <div class="row">
+          <div class="span5">
+            <div class="image-container">
+              <% if @page.images[i] %>
+                <%= image_tag(@page.images[i].url) %>
+              <% end %>
+            </div>
+          </div>
+          <div class="span7">
             <div class="text-container content-container">
             <%= simple_format part.body %>
             </div>
           </div>
         </div>
+        <br />
+      <% end %>
     <% end %>
   </div>
 </div>
