adds tilde on top of n in espnol

--- a/app/views/refinery/_menu.html.erb
+++ b/app/views/refinery/_menu.html.erb
@@ -29,7 +29,7 @@
           <% if ::I18n.locale == :es %>
             <li><%= link_to 'English', '/' %> </li>
           <% else %>
-            <li><%= link_to 'Espanol', '/es' %> </li>
+            <li><%= link_to 'Español', '/es' %> </li>
           <% end %>
         </ul>
 
