--- a/app/views/refinery/pages/histories.html.erb
+++ b/app/views/refinery/pages/histories.html.erb
@@ -37,11 +37,11 @@
             <div class="histories-heading">
               <div class="content-container">
                 <a name="<%= interview.full_name.parameterize %>" class="anchor" ></a>
-                <h3><%= interview.full_name %></h3>
+                <h3><%= interview.full_name %> - <%= interview.city%></h3>
                 <% if ::I18n.locale == :es %>
-                  <h4><%= interview.city%> - Entró en US <%= interview.date_of_entry %> </h4>
+                  <h4>Llegó a los EE.UU: <%= interview.date_of_entry %> </h4>
                 <% else %>
-                  <h4><%= interview.city%> - Entered US on <%= interview.date_of_entry %> </h4>
+                  <h4>Arrived in the US: <%= interview.date_of_entry %> </h4>
                 <% end %>
               </div>
             </div>
@@ -54,7 +54,7 @@
               <br />
               <% unless interview.clips.empty? %>
                 <% if ::I18n.locale == :es %>
-                  <h4>Fragmentos de Entrevistas</h4>
+                  <h4>Segmentos de la entravista</h4>
                 <% else %>
                   <h4>Interview Clips</h4>
                 <% end %>
@@ -91,8 +91,12 @@
             <div class="histories-heading">
               <div class="content-container">
                 <a name="<%= interview.full_name.parameterize %>" class="anchor" ></a>
-                <h3><%= interview.full_name %></h3>
-                <h4><%= interview.city%> - Entered US on <%= interview.date_of_entry %> </h4>
+                <h3><%= interview.full_name %> - <%= interview.city%></h3>
+                <% if ::I18n.locale == :es %>
+                  <h4>Llegó a los EE.UU: <%= interview.date_of_entry %> </h4>
+                <% else %>
+                  <h4>Arrived in the US: <%= interview.date_of_entry %> </h4>
+                <% end %>
               </div>
             </div>
             <div class="content-container">
@@ -104,12 +108,19 @@
             </div>
             <div class="content-container">
               <% unless interview.clips.empty? %>
-                <h4>Interview Clips</h4>
-              <% end %>
+                <% if ::I18n.locale == :es %>
+                  <h4>Segmentos de la entravista</h4>
+                <% else %>
+                  <h4>Interview Clips</h4>
+                <% end %>              <% end %>
               <ul class="clips">
                 <% interview.clips.each do |clip| %>
                   <% file = ::Refinery::Resource.find_by_id(clip.file_id) %>
-                  <li><%= link_to clip.name, "/clips/#{clip.id}" %></li>
+                  <% if ::I18n.locale == :es %>
+                    <li><%= link_to clip.name_es, "/es/clips/#{clip.id}" %></li>
+                  <% else %>
+                    <li><%= link_to clip.name, "/clips/#{clip.id}" %></li>
+                  <% end %>
                 <% end %>
               </ul>
             </div>
