--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,13 +1,17 @@
 @import 'variables';
 
+.interview-text {
+ background-color: white;
+ margin-top: -10px;
+}
+
 #first-history {
-  margin-top: 20px;
+  h3 {
+    margin-bottom: 5px;
+  }
+  margin-top: 60px;
   .history {
     margin-top: 20px;
-    #interview-text {
-     background-color: white;
-     margin-top: -10px;
-    }
   }
 }
 
