fixes link error on homepage

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -27,7 +27,7 @@
               <% if ::I18n.locale == :es %>
                 Para aprender más sobre <%= interview.first_name %> y otros Cubanos que viven en el área de Chicago, haga cliq <%= link_to 'aquí.', '/oral-histories' %>
               <% else %>
-                To learn more about <%= interview.first_name %> and other Cubans living in the Chicago area, click <%= link_to 'here.', 'here' %>
+                To learn more about <%= interview.first_name %> and other Cubans living in the Chicago area, click <%= link_to 'here.', '/oral-histories' %>
               <% end %>
             </div>
           </div>
