--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -16,10 +16,15 @@
   <%= render '/refinery/google_analytics' %>
 
   <%= javascript_include_tag 'modernizr-min' %>
-
-  <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?sensor=false">
+  <% if @spanish %>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?sensor=false&language=es">
     </script>
+  <% else %>
+    <script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?sensor=false">
+      </script>
+  <% end %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
