--- a/app/views/refinery/pages/donate.html.erb
+++ b/app/views/refinery/pages/donate.html.erb
@@ -13,7 +13,7 @@
             <%= simple_format part.body %>
             </div>
             <div id="donate">
-              <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" >
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="XM6RSHHLCDFT2">
                 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
