fixes typo on homepage

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -12,7 +12,7 @@
             <div class="content-container">
               <a name="<%= interview.full_name.parameterize %>" class="anchor" ></a>
               <% if ::I18n.locale == :es %>
-              <h3>Nuestra entravista más reciente<h3>
+              <h3>Nuestra entrevista más reciente<h3>
               <h4><%= interview.full_name %> - <%= interview.city_es%></h4>
                 <h4>Llegó a los EE.UU.: <%= interview.date_of_entry_es %> </h4>
               <% else %>
